<resources>
    <string name="app_name">MyDEFCON</string>
    <string name="title_checklist">Checklist</string>
    <string name="title_status">Status</string>
    <string name="defcon_1">DEFCON 1</string>
    <string name="defcon_2">DEFCON 2</string>
    <string name="defcon_3">DEFCON 3</string>
    <string name="defcon_4">DEFCON 4</string>
    <string name="defcon_5">DEFCON 5</string>
    <string name="sharedpreferences_name">MyDefconPreferences</string>
    <string name="title_settings">Settings</string>
    <string name="title_terms">Terms</string>
    <string name="title_privacy">Privacy</string>
    <string name="action_listsync">Sync List</string>
    <string name="action_statusshare">Share Status</string>
    <string name="license_title">Licenses</string>
    <string name="html_terms">"file:///android_asset/terms.html"</string>
    <string name="html_privacy">"file:///android_asset/privacy.html"</string>
    <string name="delete">Delete</string>
    <string name="appwidget_text">DEFCON Status</string>
    <string name="app_widget_description">DEFCON Status</string>
    <string name="notification_channel_name">Socket listening</string>
    <string name="information_intro">Developed by</string>
    <string name="information_projecturl">Project URL:</string>
    <string name="checkitem_hinttext">Item text</string>
    <string name="defcon12345_image_description">DEFCON 1–2–3–4–5</string>
    <string name="create_group">Create Group</string>
    <string name="leave_group">Leave Group</string>
    <string name="join_group">Join Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="preferencecategory_title_information">Information</string>
    <string name="preferencecategory_title_group">Group</string>
    <string name="group_qr_code">Group QR Code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scanned">Scanned: %1$s</string>
    <string name="scan_cancelled">Scan cancelled</string>
    <string name="followers">Follower</string>
    <string name="installation_id">Installation-ID:</string>
    <string name="could_not_retrieve_installation_id">Could not retrieve Installation ID</string>
    <string name="loading_installation_id">Loading...</string>
    <string name="title_licenses">Licenses</string>
    <string name="versionName" translatable="false">2.1.9</string>
</resources>