<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_status">

    <fragment
        android:id="@+id/navigation_checklist"
        android:name="com.marcusrunge.mydefcon.ui.checklist.ChecklistFragment"
        android:label="@string/title_checklist"
        tools:layout="@layout/fragment_checklist" />

    <fragment
        android:id="@+id/navigation_status"
        android:name="com.marcusrunge.mydefcon.ui.status.StatusFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_status" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.marcusrunge.mydefcon.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/navigation_terms"
        android:name="com.marcusrunge.mydefcon.ui.terms.TermsFragment"
        android:label="@string/title_terms"
        tools:layout="@layout/terms_fragment" />
    <fragment
        android:id="@+id/navigation_privacy"
        android:name="com.marcusrunge.mydefcon.ui.privacy.PrivacyFragment"
        android:label="@string/title_privacy"
        tools:layout="@layout/privacy_fragment" />
</navigation>