<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="72dp"
    android:layout_marginEnd="18dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/button_group_create"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_group"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/button_group_join"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/join_group"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/button_group_create"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/ivQRCode"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:contentDescription="@string/group_qr_code"
        android:scaleType="fitCenter"
        android:background="#DDDDDD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_group_create"/>
</androidx.constraintlayout.widget.ConstraintLayout>