<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="72dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/application_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versionName"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_name_text" />

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_intro"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/version_text" />

    <ImageView
        android:id="@+id/mr_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="@id/mr_text"
        app:layout_constraintStart_toStartOf="@id/mr_text"
        app:layout_constraintTop_toBottomOf="@id/intro_text"
        app:srcCompat="@drawable/ic_mr" />

    <TextView
        android:id="@+id/mr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:includeFontPadding="false"
        android:text="MARCUS RUNGE"
        android:textColor="#606165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mr_logo"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/mr_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="flymarcus737@gmail.com"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mr_text"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/projecturl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/information_projecturl"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mr_email_text" />

    <TextView
        android:id="@+id/projecturlUrl_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="https://github.com/marcusrunge/MyDEFCON.Droid"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projecturl_text"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/createDeleteDefconGroup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projecturlUrl_text"/>

    <Button
        android:id="@+id/joinLeaveDefconGroup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createDeleteDefconGroup_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>